# agrirouter-api-qt

./: CMakeLists.txt  README.md
CommunicationInterface/: HTTPConnection.cpp  HTTPConnection.h  HTTPSender.cpp  HTTPSender.h
inc/CCIAgrirouter/: AgrirouterClient.h  CCIAgrirouter_export.h  Globals.h  ICommunicationInterface.h
inc/Protobuf/cloud-provider-integration/: cloud-virtualized-app-registration.pb.h
inc/Protobuf/commons/: chunk.pb.h  message.pb.h
inc/Protobuf/messaging/request/: request.pb.h
inc/Protobuf/messaging/request/payload/account/: endpoints.pb.h
inc/Protobuf/messaging/request/payload/efdi/: grpc-efdi.pb.h
inc/Protobuf/messaging/request/payload/endpoint/: capabilities.pb.h  subscription.pb.h
inc/Protobuf/messaging/request/payload/feed/: feed-requests.pb.h
inc/Protobuf/messaging/response/: response.pb.h
inc/Protobuf/messaging/response/payload/account/: endpoints.pb.h
inc/Protobuf/messaging/response/payload/endpoint/: capability.pb.h
inc/Protobuf/messaging/response/payload/feed/: feed-response.pb.h
src/: AgrirouterClient.cpp  AgrirouterClientPrivate.cpp  AgrirouterClientPrivate.h  AgrirouterMessage.cpp  AgrirouterMessage.h  AgrirouterMessageUtils.h  MessageConverter.cpp  MessageConverter.h  MessageQueue.cpp  MessageQueue.h  Settings.cpp  Settings.h  Utils.h
src/HTTPRequest/: MessagingService.cpp  MessagingService.h  Registration.cpp  Registration.h
src/HTTPRequest/Get/: ResponsePoll.cpp  ResponsePoll.h  ResponsePollLoop.cpp  ResponsePollLoop.h
src/HTTPRequest/Post/: MessageSender.cpp  MessageSender.h
src/Protobuf/cloud-provider-integration/: cloud-virtualized-app-registration.pb.cc
src/Protobuf/commons/: chunk.pb.cc  message.pb.cc
src/Protobuf/messaging/request/: request.pb.cc
src/Protobuf/messaging/request/payload/account/: endpoints.pb.cc
src/Protobuf/messaging/request/payload/efdi/: grpc-efdi.pb.cc
src/Protobuf/messaging/request/payload/endpoint/: capabilities.pb.cc  subscription.pb.cc
src/Protobuf/messaging/request/payload/feed/: feed-requests.pb.cc
src/Protobuf/messaging/response/: response.pb.cc
src/Protobuf/messaging/response/payload/account/: endpoints.pb.cc
src/Protobuf/messaging/response/payload/endpoint/: capability.pb.cc
src/Protobuf/messaging/response/payload/feed/: feed-response.pb.cc
